--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 html {
   height: 100%;
+  overflow-y: scroll;
 }
 
 * {
@@ -8,8 +9,13 @@ html {
 }
 
 body {
-  font: normal 0.8em "trebuchet ms", arial, sans-serif;
-  background: #f0efe2 url(background.png) repeat;
+  font:
+    normal 0.8em "trebuchet ms",
+    arial,
+    sans-serif;
+  background: #f0efe2 url(background.jpg) fixed;
+  background-size: cover;
+  background-attachment: fixed;
   color: #000;
 }
 
@@ -28,14 +34,20 @@ h3,
 h4,
 h5,
 h6 {
-  font: normal 175% "century gothic", arial, sans-serif;
+  font:
+    normal 175% "century gothic",
+    arial,
+    sans-serif;
   color: #000;
   margin: 0 0 15px 0;
   padding: 15px 0 5px 0;
 }
 
 h2 {
-  font: normal 175% "century gothic", arial, sans-serif;
+  font:
+    normal 175% "century gothic",
+    arial,
+    sans-serif;
 }
 
 h4,
@@ -43,12 +55,16 @@ h5,
 h6 {
   margin: 0;
   padding: 0 0 5px 0;
-  font: normal 120% arial, sans-serif;
+  font:
+    normal 120% arial,
+    sans-serif;
 }
 
 h5,
 h6 {
-  font: italic 95% arial, sans-serif;
+  font:
+    italic 95% arial,
+    sans-serif;
   padding: 0 0 15px 0;
 }
 
@@ -126,7 +142,7 @@ ol li {
   justify-content: space-between;
   border-bottom: 2px solid #fff;
   padding: 10px 0;
-  
+
   width: 898px;
   position: relative;
   height: 148px;
@@ -143,7 +159,10 @@ ol li {
 
 #logo h1,
 #logo h2 {
-  font: normal 300% "century gothic", arial, sans-serif;
+  font:
+    normal 300% "century gothic",
+    arial,
+    sans-serif;
   border-bottom: 0;
   text-transform: none;
   margin: 0;
@@ -188,7 +207,9 @@ ul#menu li {
 
 ul#menu li a {
   letter-spacing: 0.1em;
-  font: normal 100% arial, sans-serif;
+  font:
+    normal 100% arial,
+    sans-serif;
   display: block;
   float: left;
   height: 17px;
@@ -266,7 +287,10 @@ ul#menu li.selected a:hover {
 
 #footer {
   width: 898px;
-  font: normal 100% "lucida sans unicode", arial, sans-serif;
+  font:
+    normal 100% "lucida sans unicode",
+    arial,
+    sans-serif;
   height: 33px;
   padding: 24px 0 5px 0;
   text-align: center;
@@ -291,7 +315,9 @@ ul#menu li.selected a:hover {
   border: 1px solid #bbb;
   width: 134px;
   padding: 4px;
-  font: 100% arial, sans-serif;
+  font:
+    100% arial,
+    sans-serif;
 }
 
 #colours {
@@ -378,4 +404,66 @@ table tr td {
   background: #f0efe2;
   color: #47433f;
   border-top: 1px solid #fff;
+}
+
+#content {
+  max-width: 900px;
+  margin: 0 auto;
+  line-height: 1.6;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    sans-serif;
+}
+
+.cv-section {
+  margin-bottom: 2.5rem;
+}
+
+.cv-section h2 {
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 0.3rem;
+  margin-bottom: 1.5rem;
+}
+
+.edu-item,
+.exp-item {
+  margin-bottom: 1.8rem;
+}
+
+.item-header,
+.item-subheader {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  gap: 1rem;
+}
+
+.item-title {
+  font-weight: 600;
+}
+
+.item-role {
+  font-style: italic;
+}
+
+.item-meta {
+  color: #666;
+  font-size: 0.95rem;
+  white-space: nowrap;
+}
+
+.item-detail {
+  margin-top: 0.5rem;
+  color: #444;
+}
+
+.item-list {
+  margin-top: 0.6rem;
+  padding-left: 1.2rem;
+}
+
+.item-list li {
+  margin-bottom: 0.3rem;
 }
